--- a/public/exercises/exercises_1/counter.html
+++ b/public/exercises/exercises_1/counter.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <a class="gotoback" href="/index.html">Home</a>
+      <a class="gotoback" href="./index.html">Home</a>
       <h1>Bài tập 1: Counter App</h1>
     </div>
   </body>
