--- a/public/exercises/exercises_1/weather.html
+++ b/public/exercises/exercises_1/weather.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <a class="gotoback" href="./index.html">Home</a>
+      <a class="gotoback" href="https://xuanphao19.github.io/ReactJS-Practice-F88/index.html">Home</a>
       <h1>Bài tập 6: Weather App</h1>
     </div>
   </body>
