--- a/exercises/exercises_1/comments.html
+++ b/exercises/exercises_1/comments.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/ReactJS-Practice-F88/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bài tập 5: Comment System</title>
     <link rel="stylesheet" href="../../../src/index.css" />
@@ -9,11 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <a
-        class="gotoback"
-        href="https://xuanphao19.github.io/ReactJS-Practice-F88/index.html">
-        Home
-      </a>
+      <a class="gotoback" href="/ReactJS-Practice-F88/index.html">Home</a>
       <h1>Bài tập 5: Comment System</h1>
     </div>
   </body>
