--- a/public/exercises/exercises_1/counter.html
+++ b/public/exercises/exercises_1/counter.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/ReactJS-Practice-F88/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bài tập 1: Counter App</title>
-    <link rel="stylesheet" href="../../../src/index.css" />
+    <link rel="stylesheet" href="/ReactJS-Practice-F88/src/index.css" />
     <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
   <body>
     <div class="container">
-      <a
-        class="gotoback"
-        href="https://xuanphao19.github.io/ReactJS-Practice-F88/index.html">
-        Home
-      </a>
+      <a class="gotoback" href="/ReactJS-Practice-F88/index.html">Home</a>
       <h1>Bài tập 1: Counter App</h1>
     </div>
   </body>
