--- a/exercises/exercises_1/counter.html
+++ b/exercises/exercises_1/counter.html
@@ -8,7 +8,7 @@
       href="/ReactJS-Practice-F88/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bài tập 1: Counter App</title>
-    <link rel="stylesheet" href="../../../src/index.css" />
+    <link rel="stylesheet" href="/ReactJS-Practice-F88/src/index.css" />
     <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
   <body>
