--- a/exercises/exercises_1/comments.html
+++ b/exercises/exercises_1/comments.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/ReactJS-Practice-F88/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bài tập 5: Comment System</title>
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
@@ -16,12 +13,12 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
       crossorigin></script>
 
-    <link rel="stylesheet" href="/ReactJS-Practice-F88/src/index.css" />
+    <link rel="stylesheet" href="/src/index.css" />
     <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
   <body>
     <div class="container">
-      <a class="gotoback" href="/ReactJS-Practice-F88/index.html">Home</a>
+      <a class="gotoback" href="/index.html">Home</a>
       <h1>Bài tập 5: Comment System</h1>
     </div>
   </body>
