--- a/public/exercises/exercises_1/counter.html
+++ b/public/exercises/exercises_1/counter.html
@@ -2,19 +2,109 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/ReactJS-Practice-F88/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bài tập 1: Counter App</title>
-    <link rel="stylesheet" href="/ReactJS-Practice-F88/src/index.css" />
+    <title>Bài tập 1.1: Counter App</title>
+    <!-- React & ReactDOM từ CDN -->
+    <script
+      src="https://unpkg.com/react@18/umd/react.development.js"
+      crossorigin></script>
+    <script
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+      crossorigin></script>
+    <!-- Babel để biên dịch JSX -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <link rel="stylesheet" href="/src/index.css" />
     <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
   <body>
-    <div class="container">
-      <a class="gotoback" href="/ReactJS-Practice-F88/index.html">Home</a>
-      <h1>Bài tập 1: Counter App</h1>
-    </div>
+    <div id="root"></div>
+
+    <script type="text/babel">
+      const { useState, useEffect } = React;
+      function Counter() {
+        const [count, setCount] = useState(0);
+
+        const calculate = (event) => {
+          event.preventDefault();
+          const id = event.currentTarget.id;
+          setCount(
+            id === "increase"
+              ? count + 1
+              : id === "decrease"
+              ? count - 1
+              : id === "reset" && 0,
+          );
+        };
+
+        const Header = () => {
+          const ToggleTheme = () => {
+            const [theme, setTheme] = useState(() => {
+              return localStorage.getItem("theme");
+            });
+            useEffect(() => {
+              document.documentElement.classList.toggle(
+                "dark",
+                theme === "dark",
+              );
+              localStorage.setItem("theme", theme);
+            }, [theme]);
+
+            const toggle = () => {
+              setTheme(theme === "dark" ? "" : "dark");
+            };
+            return (
+              <button className="toggle-theme" onClick={toggle}>
+                {theme === "dark" ? "🌙" : "☀️"}
+              </button>
+            );
+          };
+
+          return (
+            <header id="header">
+              <div className="header">
+                <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
+                <a className="gotoback" href="/index.html">
+                  Home
+                </a>
+                <ToggleTheme />
+              </div>
+
+              <p className="desc">
+                Dấu ấn khám phá và thực hành ReactJS cùng F8
+                <a href="https://fullstack.edu.vn/">{` - fullstack.edu.vn - `}</a>
+                Học lập trình để đi làm!
+              </p>
+            </header>
+          );
+        };
+
+        return (
+          <div className="container">
+            <Header />
+            <h2 className="exercise_1">Bài tập 1.1: Counter App</h2>
+            <div className="calculator">
+              <p
+                className="result"
+                style={{
+                  color: count > 0 ? "green" : count < 0 ? "red" : "#17171a",
+                }}>{`${count > 0 ? `+${count}` : count}`}</p>
+              <button className="calc-btn" id="increase" onClick={calculate}>
+                Increase
+              </button>
+              <button className="calc-btn" id="decrease" onClick={calculate}>
+                Decrease
+              </button>
+              <button className="calc-btn" id="reset" onClick={calculate}>
+                Reset
+              </button>
+            </div>
+          </div>
+        );
+      }
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+      root.render(<Counter />);
+    </script>
   </body>
 </html>
