--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="color-scheme" content="dark" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thực hành ReactJS cùng F8</title>
@@ -11,14 +12,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-<!--
-
-git init
-git add .
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/xuanphao19/ReactJS-Practice-F88.git
-git push -u origin main
-
--->
