--- a/public/exercises/exercises_1/counter.html
+++ b/public/exercises/exercises_1/counter.html
@@ -15,7 +15,6 @@
     <!-- Babel để biên dịch JSX -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <link rel="stylesheet" href="/src/index.css" />
     <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
   <body>
@@ -65,7 +64,7 @@
             <header id="header">
               <div className="header">
                 <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
-                <a className="gotoback" href="/index.html">
+                <a className="gotoback" href="/ReactJS-Practice-F88/index.html">
                   Home
                 </a>
                 <ToggleTheme />
