--- a/public/exercises/exercises_1/comments.html
+++ b/public/exercises/exercises_1/comments.html
@@ -115,7 +115,7 @@
           setComment({ name: "", email: "", body: "" });
         };
 
-        if (loading) return <p>Đang tải dữ liệu...</p>;
+        if (loading) return <p>Loading...</p>;
 
         return (
           <div className="container">
