--- a/exercises/exercises_1/comments.html
+++ b/exercises/exercises_1/comments.html
@@ -60,7 +60,7 @@
             <header id="header">
               <div className="header">
                 <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
-                <a className="gotoback" href="/index.html">
+                <a className="gotoback" href="/ReactJS-Practice-F88/index.html">
                   Home
                 </a>
                 <ToggleTheme />
@@ -115,7 +115,7 @@
           setComment({ name: "", email: "", body: "" });
         };
 
-        if (loading) return <p>Đang tải dữ liệu...</p>;
+        if (loading) return <p>Loading...</p>;
 
         return (
           <div className="container">
