--- a/exercises/exercises_1/counter.html
+++ b/exercises/exercises_1/counter.html
@@ -64,7 +64,7 @@
             <header id="header">
               <div className="header">
                 <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
-                <a className="gotoback" href="/index.html">
+                <a className="gotoback" href="/ReactJS-Practice-F88/index.html">
                   Home
                 </a>
                 <ToggleTheme />
