--- a/exercises/exercises_1/counter.html
+++ b/exercises/exercises_1/counter.html
@@ -22,8 +22,10 @@
 
     <script type="text/babel">
       const { useState, useEffect } = React;
+
       function Counter() {
         const [count, setCount] = useState(0);
+        const [pressed, setPressed] = React.useState(false);
 
         const calculate = (event) => {
           event.preventDefault();
@@ -35,6 +37,8 @@
               ? count - 1
               : id === "reset" && 0,
           );
+          setPressed(true);
+          setTimeout(() => setPressed(false), 200);
         };
 
         const Header = () => {
@@ -98,6 +102,18 @@
               <button className="calc-btn" id="reset" onClick={calculate}>
                 Reset
               </button>
+              <div className="electrode">
+                {count > 0 && (
+                  <span className={`anode${pressed ? " pressed" : ""}`}>
+                    Dương
+                  </span>
+                )}
+                {count < 0 && (
+                  <span className={`cathode${pressed ? " pressed" : ""}`}>
+                    Âm
+                  </span>
+                )}
+              </div>
             </div>
           </div>
         );
