--- a/exercises/exercises_1/products.html
+++ b/exercises/exercises_1/products.html
@@ -4,21 +4,261 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bài tập 4: Product List</title>
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <title>Bài tập 1.4: Product List</title>
+    <!-- React & ReactDOM từ CDN -->
     <script
       src="https://unpkg.com/react@18/umd/react.development.js"
       crossorigin></script>
     <script
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
       crossorigin></script>
+    <!-- Babel để biên dịch JSX -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
   <body>
-    <div class="container">
-      <a class="gotoback" href="/index.html">Home</a>
-      <h1>Bài tập 4: Product List</h1>
-    </div>
+    <div id="root"></div>
+
+    <script type="text/babel">
+      const { useState, useEffect } = React;
+
+      const Header = () => {
+        const ToggleTheme = () => {
+          const [theme, setTheme] = useState(() => {
+            return localStorage.getItem("theme");
+          });
+          useEffect(() => {
+            document.documentElement.classList.toggle("dark", theme === "dark");
+            localStorage.setItem("theme", theme);
+          }, [theme]);
+
+          const toggle = () => {
+            setTheme(theme === "dark" ? "" : "dark");
+          };
+          return (
+            <button className="toggle-theme" onClick={toggle}>
+              {theme === "dark" ? "🌙" : "☀️"}
+            </button>
+          );
+        };
+
+        return (
+          <header id="header">
+            <div className="header">
+              <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
+              <a className="gotoback" href="/ReactJS-Practice-F88/index.html">
+                Home
+              </a>
+              <ToggleTheme />
+            </div>
+
+            <p className="desc">
+              Dấu ấn khám phá và thực hành ReactJS cùng F8
+              <a href="https://fullstack.edu.vn/">{` - fullstack.edu.vn - `}</a>
+              Học lập trình để đi làm!
+            </p>
+          </header>
+        );
+      };
+
+      function Products() {
+        const [posts, setPosts] = useState([]);
+        const [bloger, setBloger] = useState([]);
+        const [blogDetails, setBlogDetails] = useState([]);
+
+        useEffect(() => {
+          async function fetchBlog() {
+            const blogs = await fetch(
+              "https://jsonplaceholder.typicode.com/posts?_limit=12",
+            ).then((r) => r.json());
+            setPosts(blogs);
+
+            blogs.map(async (post) => {
+              const author = await fetch("https://randomuser.me/api/").then(
+                (r) => r.json(),
+              );
+              const startOfYear = new Date(2025, 6, 1).getTime();
+              const now = Date.now();
+              const randomDate = new Date(
+                startOfYear + Math.random() * (now - startOfYear),
+              ).toLocaleDateString("vi-VN");
+
+              const blog = {
+                id: post.id,
+                title: post.title,
+                body: post.body,
+                name: `${author.results[0].name.first} ${author.results[0].name.last}`,
+                avatar: author.results[0].picture.medium,
+                publishedAt: randomDate,
+                duration: Math.floor(Math.random() * 9 + 2),
+              };
+              setBloger((prev) => [...prev, blog]);
+            });
+
+            setPosts(posts);
+          }
+          fetchBlog();
+        }, []);
+
+        if (!bloger.length)
+          return (
+            <div className="loading">
+              <svg
+                width="250"
+                height="250"
+                viewBox="0 0 50 50"
+                xmlns="http://www.w3.org/2000/svg">
+                <circle
+                  cx="25"
+                  cy="25"
+                  r="20"
+                  stroke="#646cff"
+                  strokeLinecap="round"
+                  strokeWidth="2"
+                  fill="none"
+                  strokeDasharray="31.4"
+                  strokeDashoffset="0">
+                  <animateTransform
+                    attributeName="transform"
+                    type="rotate"
+                    from="0 25 25"
+                    to="360 25 25"
+                    dur="1s"
+                    repeatCount="indefinite"
+                  />
+                </circle>
+                <text
+                  x="25"
+                  y="25"
+                  textAnchor="middle"
+                  dominantBaseline="middle"
+                  fontSize="6"
+                  fontWeight="700"
+                  fill="#646cff">
+                  Loading…
+                </text>
+              </svg>
+            </div>
+          );
+
+        const Product = ({ bloger }) =>
+          bloger.map((blog) => {
+            return (
+              <div
+                key={blog.id}
+                id={blog.id}
+                className="blog-card"
+                onClick={handleShowDetails}>
+                <div className="header">
+                  <div className="author">
+                    <a href="/lengochuyen">
+                      <img className="avatar" src={blog.avatar} alt="" />
+                    </a>
+                    <a className="bloger" href="/lengochuyen">
+                      <span>{blog.name}</span>
+                    </a>
+                  </div>
+
+                  <div className="actions">
+                    <div className="blog-id">
+                      <strong>Blog Id: {blog.id}</strong>
+                    </div>
+                    <div className="toggle-btn">
+                      <svg
+                        className="svg-inline--fa fa-bookmark"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 384 512">
+                        <path
+                          fill="currentColor"
+                          d="M0 48C0 21.5 21.5 0 48 0l0 48V441.4l130.1-92.9c8.3-6 19.6-6 27.9 0L336 441.4V48H48V0H336c26.5 0 48 21.5 48 48V488c0 9-5 17.2-13 21.3s-17.6 3.4-24.9-1.8L192 397.5 37.9 507.5c-7.3 5.2-16.9 5.9-24.9 1.8S0 497 0 488V48z"></path>
+                      </svg>
+                    </div>
+                    <div className="option-btn">
+                      <svg
+                        aria-hidden="true"
+                        focusable="false"
+                        data-prefix="fas"
+                        data-icon="ellipsis"
+                        className="svg-inline--fa fa-ellipsis"
+                        role="img"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512">
+                        <path
+                          fill="currentColor"
+                          d="M8 256a56 56 0 1 1 112 0A56 56 0 1 1 8 256zm160 0a56 56 0 1 1 112 0 56 56 0 1 1 -112 0zm216-56a56 56 0 1 1 0 112 56 56 0 1 1 0-112z"></path>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+
+                <div className="blog-info">
+                  <a href="/blog/trai-nghiem-hoc-thu-react-native-devops-c-vo-cung-chat-luong-cung-f8-1">
+                    <h2 className="blog-title">{blog.title}</h2>
+                  </a>
+                  <p className="blog-desc">{blog.body}</p>
+
+                  <div className="blog-footer">
+                    <div className="metaInfo">
+                      <span className="post-time">
+                        Post at: {blog.publishedAt}
+                      </span>
+                      <span className="read-time">
+                        {blog.duration} phút đọc
+                      </span>
+                    </div>
+                    <button className="view-detail-btn">View Details</button>
+                  </div>
+                </div>
+              </div>
+            );
+          });
+
+        const handleShowDetails = (e) => {
+          const target = e.target.closest(".view-detail-btn");
+          if (!target) return;
+          const blogId = Number(e.currentTarget.id);
+          if (target) {
+            const blogDetail = bloger.find((item) => blogId === item.id);
+            setBlogDetails([blogDetail]);
+          }
+        };
+
+        const handleCloseDetails = (e) => {
+          const overlay = e.target.closest(".details-overlay");
+          const target = e.target.closest(".close-bog-detail-btn");
+          if (target || overlay) setBlogDetails([]);
+        };
+
+        return (
+          <div className="container">
+            <Header />
+            <div className="exercise-content">
+              <h2>Bài tập 1.4: Product List</h2>
+              <div className="answer-content">
+                <div className="blog-list">
+                  {bloger.length !== 0 && <Product bloger={bloger} />}
+                </div>
+              </div>
+            </div>
+            {blogDetails.length !== 0 && (
+              <>
+                <div class="details-overlay" onClick={handleCloseDetails}></div>
+                <div className="blog-details">
+                  <button
+                    className="close-bog-detail-btn"
+                    onClick={handleCloseDetails}>
+                    Close
+                  </button>
+                  <Product bloger={blogDetails} />
+                </div>
+              </>
+            )}
+          </div>
+        );
+      }
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+      root.render(<Products />);
+    </script>
   </body>
 </html>
